2002-02-24  Andras Varga

	* tkapp.cc: improvement on breakpoint handling.

2002-02-06  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* objinsp.cc (update): fill in class info field with message's
	classname

	* objinsp.tcl (create_messageinspector): add class info

	* structinsp.cc (update): display value and name of enums

2002-01-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* objinsp.tcl (create_structpanel): Added vertical scrollbars for
	those who use a lot of message fields.

	* structinsp.cc (update): 4k as buf[] size is not enough
	especially for large messages containing arrays. I have set it to
	5M !!

2001-11-25  Andras Varga

	* implemented "message subclassing": message inspectors have now a
        Fields page which displays fields exposed through the cStructDescriptor
        interface. (If there's no cStructDescriptor for the object, the Fields
        tab is missing.)

        * the default object inspector has been improved; it also displays a
        Fields page if there's a cStructDescriptor for the object.

        * TODO: Fields page will have to be refined (now it's a simple
        multi-line text widget).

        * widget.tcl: label texts created with label-sunkenlabel are now
        justfied left

2001-09-14  Andras Varga

        * updated to cModule's new display string methods

2001-09-11  Andras Varga

	* improved plugin handling: reads plugins from OMNETPP_PLUGIN_PATH
        which can be a list of directories (not just a single directory name).
        OMNETPP_PLUGIN_PATH is currently set to ./plugins (hardcoded).
        DLL file names that are looked for now correctly depend on the
        platform (*.dll on windows, .so* on *nix).

2001-09-01 Andras Varga

	* CONST_CAST() replaced by const_cast<>()

2001-07-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* tkcmd.cc (simulationOk_cmd): use macro CONST_CAST (defined at top of
	file) to avoid compilation errors with gcc-2.95.3
	(isRunning_cmd): CONST_CAST like above
