@@ -1,3 +1,7 @@
+2002-02-29  Andras Varga
+
+	* dialogs.tcl: implemented backwards search/replace
+
 2002-02-24  Andras Varga
 
 	* tkapp.cc: improvement on breakpoint handling.
